added mp3 source

--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
 </head>
 <body>
 
-<audio src="demo.ogg" ></audio>
+<audio >
+  <source src="demo.ogg" >
+  <source src="demo.mp3" >
+</audio>
 <button>play</button>
 
 <script>
